<resources>
    <string name="app_name">CodeNotes</string>

    <string name="header_log">Authorisation</string>
    <string name="header_reg">Registration</string>
    <string name="header_note">New note</string>
    <string name="login_username_label">Username</string>
    <string name="title">Title</string>
    <string name="bbody">Body</string>
    <string name="add">Save</string>
    <string name="login_username_input_placeholder">Enter username</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_input_placeholder">Enter password</string>
    <string name="login_enter_button_label">Enter</string>

    <string name="title_activity_notes">NotesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password_label">Confirm</string>
    <string name="confirm_password_input_placeholder">Repeat password</string>
    <string name="register_button_label">Register</string>
    <string name="switch_to_register_button_label">REGISTER</string>
    <string name="create">CREATE</string>
    <string name="some_text">some text</string>
    <string name="delete">DELETE</string>
    <string name="logout">Logout</string>
</resources>
