<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/header_note"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Login"
            android:layout_marginTop="75dp"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_title"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@+id/add_title"
            android:hint="@string/title">
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/create" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>